# contextualizes_entities_from_medical_document

./: .dockerignore  .flake8  .gitignore  Dockerfile  Makefile  ReadMe.md  debug.py  download_model.sh  pyproject.toml
app/: main.py
app/api/: router.py  v1.py
app/schema/api/v1/: response_model.py
app/schema/error/: response_model.py
app/util/: auth.py  config.py  log.py  middleware.py  pdf.py  pdf_model.py  text_context.py
documentation/: DecisionDocumentation.md
tests/: pytest.ini
tests/end_to_end_test/: test_extract.py
tests/end_to_end_test/data/: Enfothelial dysfunction.json
tests/integration_test/: entity_model.py
tests/integration_test/data/: results.py
tests/unit_test/util/: test_entity_extraction.py  test_util_parse_pdf.py
