[project]
name = "contextualizeentityfromscientificpaper"
version = "0.1.0"
description = "a software solution that automatically extracts and contextualizes entities from provided scientific paper PDFs. Data should be processed and returned via an API endpoint."
authors = [
    {name = "Nelson Alfonso",email = "nelson_alfonso@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (==0.115.11)",
    "uvicorn[uvloop] (==0.34.0)",
    "transformers (==4.49.0)",
    "torch (==2.6.0)",
    "python-multipart (==0.0.20)",
    "gunicorn (==23.0.0)",
    "python-json-logger (==3.3.0)",
    "pypdf (==5.3.1)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
httpx = "0.28.1"
pytest = "8.3.5"
pytest-dotenv = "0.5.2"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.1.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
